# softauth

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  app.py  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/fastapi_example/: main.py  requirements.txt
examples/flask_example/: main.py  requirements.txt
softauth/: __init__.py
softauth/cli/: __init__.py  commands.py
softauth/core/: __init__.py  auth.py  config.py  exceptions.py
softauth/database/: __init__.py  models.py  repository.py  session.py
softauth/django/: __init__.py  adapter.py  decorators.py  middleware.py  urls.py  views.py
softauth/fastapi/: __init__.py  adapter.py  dependencies.py  middleware.py  routes.py
softauth/flask/: __init__.py  adapter.py  decorators.py  middleware.py  routes.py
softauth/interfaces/: __init__.py  adapter.py  auth_provider.py  token_store.py  user_store.py
softauth/jwt/: __init__.py  handler.py  schemas.py
softauth/security/: __init__.py  password.py
tests/: conftest.py  test_core.py  test_database.py  test_django.py  test_fastapi.py  test_flask.py  test_jwt.py  test_security.py
