[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "softauth"
version = "0.1.0"
description = "Zero-setup JWT authentication for FastAPI and Flask"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "softauth contributors" }]
keywords = ["authentication", "jwt", "fastapi", "flask", "security", "rbac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Typing :: Typed",
]
dependencies = [
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
    "python-multipart>=0.0.6",
]
flask = [
    "flask>=2.3.0",
]
django = [
    "django>=4.2",
]
sqlmodel = [
    "sqlmodel>=0.0.14",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "uvicorn>=0.23.0",
    "fastapi[all]>=0.100.0",
    "flask>=2.3.0",
    "django>=4.2",
    "python-multipart>=0.0.6",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
softauth = "softauth.cli.commands:app"

[project.urls]
Homepage = "https://github.com/your-org/softauth"
Repository = "https://github.com/your-org/softauth"
Documentation = "https://softauth.readthedocs.io"
"Bug Tracker" = "https://github.com/your-org/softauth/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["softauth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=softauth --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true
